android: QApplication uses readAllBytes/Paths (AGP9 jdkImage lacks readString); deploy Qt6Android.jar